          - clear process info cache after sending commands
          - fix weekly cron jobs on Tuesdays (Alexandre Anriot, #525)
          - Panorama View:
            - make text label background size configurable
            - add extra_fonts option to extend the list of available fonts
            - add show border option for services and hosts panel
            - fix label zIndex positioning
            - fix label position not being saved
            - fix label removed when hitting cancel in settings window
          - Config Tool:
            - fix tools changes not beeing saved
            - fix stripping last option when rewriting commands (#518)
          - Business Process:
            - add eventhandler attribute

2.00-2   Fri Aug 28 16:19:25 CEST 2015
          - add cancel button to all external jobs
          - parse performance data with U(nknown) values
          - fix user password link when invoked from main page
          - fix logrotate missing su directive on logrotate > 3.8 (#471)
          - fix duplicate installed logrotate file (#511)
          - fix config file parser on escaped hashes (#505)
          - Reports:
            - add danish localization
          - Config Tool:
            - add generic text editor
            - fix problem when cloning commands
          - Panorama View:
            - fix initial text label position (#506)
            - fix corrupted tab export (#507)


2.00     Mon Jul 13 22:49:52 CEST 2015
          - add local settings config drop dir support via thruk_local.d/
          - changed internal storage format to json everywhere
          - improved memory usage
          - improved startup time
          - improved page rendering
          - users can change their htpasswd passwords
          - retry setting recurring downtimes in case of errors
          - fix redirect without trailing slash on login
          - fix event log filter for unprivileged contacts (#406)