@@ -9,6 +9,7 @@ next:
             - make text label background size configurable
             - add extra_fonts option to extend the list of available fonts
             - add show border option for services and hosts panel
+            - fix list of public dashboards for admin users
             - fix label zIndex positioning
             - fix label position not being saved
             - fix label removed when hitting cancel in settings window
